--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "client:codegen": "graphql-codegen -r dotenv/config",
+    "client:fragments": "node -r dotenv/config ./api/fetch-fragments.js",
+    "client:regen": "yarn client:codegen && yarn client:fragments"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@expo/react-native-action-sheet": "^3.13.0",
     "@expo/vector-icons": "^12.0.5",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -28,6 +37,7 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "graphql": "^16.3.0",
     "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
