--- a/codegen.yml
+++ b/codegen.yml
@@ -4,6 +4,9 @@ documents:
   - '!./api/__generated__/apollo-graphql.ts'
 overwrite: true
 generates:
+  ./api/__generated__/possibleTypes.ts:
+    plugins:
+      - fragment-matcher
   ./api/__generated__/apollo-graphql.tsx:
     plugins:
       - add:
