--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@expo/vector-icons": "^12.0.5",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/fragment-matcher": "^3.2.1",
     "@graphql-codegen/typescript": "^2.4.7",
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "@graphql-codegen/typescript-react-apollo": "^3.2.10",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
@@ -37,7 +39,9 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "formik": "^2.2.9",
     "graphql": "^16.3.0",
+    "jwt-decode": "^3.1.2",
     "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -47,7 +51,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
