--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "dayjs": "^1.11.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -41,6 +42,7 @@
     "expo-web-browser": "~10.1.0",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
+    "immer": "^9.0.12",
     "jwt-decode": "^3.1.2",
     "prettier": "^2.5.1",
     "react": "17.0.1",
