add: First attempt at toast, but the library kind of sucks

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#9852F1"
       }
     },
     "web": {
