--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.2",
     "react-native-web": "0.17.1",
+    "recoil": "^0.6.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
